Crear controlador MoviesController y sus vistas con scafolding

--- a/BasicoWebMVCCore/appsettings.json
+++ b/BasicoWebMVCCore/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BasicoWebMVCCoreContext": "Server=(localdb)\\mssqllocaldb;Database=BasicoWebMVCCoreContext-d01952cd-9d37-470f-a1e9-abe9e35d77c0;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
